WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41294
SVG CurvetoCubic Path not implemented for relative cordinates
https://bugs.webkit.org/show_bug.cgi?id=41294
Summary
SVG CurvetoCubic Path not implemented for relative cordinates
Varun Jain
Reported
2010-06-28 12:40:42 PDT
Created
attachment 59924
[details]
SVG image defined using relative cordinates. Not displayed properly in chrome and safari. In file
http://trac.webkit.org/browser/trunk/WebCore/svg/SVGPathSegList.cpp#L131
there is no implementation for the enum SVGPathSeg::PATHSEG_CURVETO_CUBIC_REL. Due to this, SVG images defined using relative coordinates are rendered incorrectly. For instance, the attached html is an image that is rendered correctly on FF but is clipped off in chrome and safari.
Attachments
SVG image defined using relative cordinates. Not displayed properly in chrome and safari.
(2.10 KB, text/html)
2010-06-28 12:40 PDT
,
Varun Jain
no flags
Details
Proposed Patch
(31.83 KB, patch)
2010-07-02 07:59 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Varun Jain
Comment 1
2010-07-02 07:59:14 PDT
Created
attachment 60368
[details]
Proposed Patch
Oliver Hunt
Comment 2
2010-07-02 14:39:01 PDT
Comment on
attachment 60368
[details]
Proposed Patch r=me -- do you have commit bit? or should this be in the commit queue?
Varun Jain
Comment 3
2010-07-02 19:39:04 PDT
Comment on
attachment 60368
[details]
Proposed Patch Hi Oliver.. please set commit-queue:+
WebKit Commit Bot
Comment 4
2010-07-06 11:10:28 PDT
Comment on
attachment 60368
[details]
Proposed Patch Clearing flags on attachment: 60368 Committed
r62568
: <
http://trac.webkit.org/changeset/62568
>
WebKit Commit Bot
Comment 5
2010-07-06 11:10:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug