2010-07-06  Varun Jain  <varunjain@chromium.org>

Reviewed by Oliver Hunt.

        Implementing CURVE_TO_CUBIC specification for SVG Path Segments. Currently,
        curves specified in relative cordinates such as using createCurvetoCubicRel()
        javascript function are not displayed.

        SVG CurvetoCubic Path not implemented for relative cordinates
        https://bugs.webkit.org/show_bug.cgi?id=41294

        * platform/mac/svg/custom/svg-curve-with-relative-cordinates-expected.checksum: Added.
        * platform/mac/svg/custom/svg-curve-with-relative-cordinates-expected.png: Added.
        * platform/mac/svg/custom/svg-curve-with-relative-cordinates-expected.txt: Added.
        * svg/custom/svg-curve-with-relative-cordinates.html: Added.
2010-07-06  Varun Jain  <varunjain@chromium.org>

        Reviewed by Oliver Hunt.

        Implementing CURVE_TO_CUBIC specification for SVG Path Segments. Currently,
        curves specified in relative cordinates such as using createCurvetoCubicRel()
        javascript function are not displayed.

        SVG CurvetoCubic Path not implemented for relative cordinates
        https://bugs.webkit.org/show_bug.cgi?id=41294

        Test: svg/custom/svg-curve-with-relative-cordinates.html

        * svg/SVGPathSegList.cpp:
        (WebCore::SVGPathSegList::toPathData):

Canonical link: https://commits.webkit.org/53483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62568 268f45cc-cd09-0410-ab3c-d52691b4dbfc